<resources>

    <!-- Main Activity -->
    <string name="app_name">dynOBD</string>

    <!-- MAIN ACTIVITY -->
    <string name="btn_Main_start_trip">Start Trip</string>
    <string name="btn_Main_end_trip">End Trip</string>
    <string name="btn_Main_connect_obd">Connect to vehicle</string>
    <string name="btn_Main_disconnect_obd">Disconnect OBD</string>
    <string name="param_gauge_max_speed">200</string>
    <string name="param_gauge_max_rpm">6000</string>

    <!-- LOCATOR ACTIVITY -->
    <string name="title_activity_maps">Map</string>

    <!-- TEST BUTTONS -->
    <string name="btn_TEST_test">Tst</string>
    <string name="lbl_trip_id">Trip #</string>
    <string name="lbl_trip_date">Date</string>
    <string name="lbl_trip_duration">Duration</string>
    <string name="lbl_trip_origin">Origin</string>
    <string name="lbl_trip_destination">Destination</string>
    <string name="lbl_trip_maxSpeed">Max Speed</string>
    <string name="lbl_trip_maxRPM">Max RPM</string>
    <string name="title_pastTrips">Past Trips</string>
    <string name="title_past_trips">Past Trips</string>
    <string name="title_about_your_car">About your Car</string>
    <string name="title_help_activity">Help</string>
    <string name="details_title">Trip Details</string>
    <string name="date">Date</string>
    <string name="duration">Duration:&#160;</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="max_speed">Maximum Speed:&#160;</string>
    <string name="avg_speed">Average Speed</string>
    <string name="max_rpm">Maximum RPM:&#160;</string>
    <string name="avg_rpm">Average RPM</string>
    <string name="back">Back</string>
    <string name="switch_Main_simulate_trip">Simulated Data</string>
    <string name="bluetooth_status">Bluetooth status:&#160;</string>
    <string name="disconnected_status">DISCONNECTED</string>
    <string name="time_departure">Departure Time:&#160;</string>
    <string name="time_arrival">Arrival Time:&#160;</string>
    <string name="lbl_Stats_general">General</string>
    <string name="lbl_Stats_start_date">Start Date:</string>
    <string name="lbl_Stats_origin_loc">Origin Location:</string>
    <string name="lbl_Stats_dest_loc">Destination Location:</string>
    <string name="lbl_Stats_tech">Tech</string>
    <string name="lbl_Stats_speed">Speed</string>
    <string name="lbl_Stats_throttle">Throttle</string>
    <string name="btn_Back">Back</string>
    <string name="btn_Stats_delete">Delete</string>
    <string name="lbl_Help_step_1">Step 1</string>
    <string name="lbl_Help_step1_desc">Plug in OBD device to\nvehicle</string>
    <string name="lbl_Help_step2">Step 2</string>
    <string name="lbl_Help_step2_desc">Connect phone to OBD device</string>
    <string name="lbl_Help_step3">Step 3</string>
    <string name="lbl_Help_step3_desc">Enjoy your trip</string>
    <string name="lbl_Main_zero_speed">0</string>
    <string name="lbl_Main_throttle">Throttle</string>
    <string name="lbl_Main_zero_throttle">0</string>
    <string name="lbl_Main_RPM">RPM</string>
    <string name="lbl_Help_step1_desc2">Connect OBD device to vehicle</string>
    <string name="lbl_Step1_desc">Ensure that the device supports your car\'s OBDII protocol. Look for an OBD2 ELM327 device, as it supports most protocols.</string>
    <string name="lbl_Step1_desc2">Plug the device into the car\'s DLC(Data link connector) which is typically located below, or to the left of the steering wheel</string>
    <string name="lbl_Step2_desc">First, pair the phone with the OBDII bluetooth. Then, click the \'Connect to Vehicle\' Button</string>
    <string name="lbl_Step2_desc2">Finally, select the OBDII device from the list of paired devices</string>
    <string name="lbl_Step3_desc">Click the \'Start Trip\' button. Keep an eye on the live data feed coming in from the car.</string>
    <string name="lbl_Step3_desc2">Don\'t forget to keep your eyes on the road!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="unable_to_recover_trip">Won\'t be able to recover this trip!</string>
    <string name="yes_im_sure">YES I\'m sure</string>
    <string name="no_nevermind">NO Nevermind</string>
    <string name="trip_deleted">Trip deleted</string>
    <string name="click_each_step">Click each step</string>
    <string name="more_detail_instructions">It will give a more detailed instructions</string>
    <string name="about">About</string>
    <string name="locator">Locator</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="connecting">Connecting...</string>
    <string name="welcome_msg">Welcome to dynOBD</string>
    <string name="welcome_msg_desec">Start by connecting to your OBD Device</string>
    <string name="need_to_pair_msg">Need to Pair with device first!</string>
    <string name="connection_success">Connection Success!</string>
    <string name="CONNECTED">CONNECTED</string>
    <string name="unsuccessful_connection">Unsuccessful Connection!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="unable_to_connect_to_device">We were unable to connect to this device. Please try again or use a different one.</string>
    <string name="DISCONNECTED">DISCONNECTED</string>
    <string name="disconnect_unsuccessful">Disconnect Unsuccessful!</string>
    <string name="bluetooth_enabled">Bluetooth Enabled</string>
    <string name="location_services_off">Location Services are OFF</string>
    <string name="take_to_settings">Taking you to settings now.</string>
    <string name="ok_take_me">OK Take me</string>
    <string name="CANCEL">CANCEL</string>
    <string name="not_connected_to_obd">Not connected to OBD</string>
    <string name="help">Help</string>
    <string name="unable_to_obtain_vin">Unable to Obtain Vin!</string>
    <string name="oh_no">Oh, no!</string>
    <string name="one_conn_at_a_time">Sorry, we can only do one connection at a time. Try again when you\'ve completed your trip!</string>
    <string name="no_connection">There\'s no connection!</string>
    <string name="need_to_connect_to_vehicle">We need to connect to your vehicle in order to get you the information you need. Make sure you do that first!</string>
    <string name="there_is_no_connection">There\'s no connection!</string>
    <string name="please_connect_to_car">We need to connect to your vehicle in order to get you the information you need. Make sure you do that first!</string>
    <string name="unable_to_download_data">Unable to Download Data!</string>
    <string name="save_the_trip">Save the Trip?</string>
    <string name="cant_recover_if_no_clicked">Can\'t recover data if NO clicked</string>
    <string name="yes_save_trip">YES Save trip</string>
    <string name="no_discard_it">NO Discard it</string>
    <string name="trip_has_been_saved">Your trip has been saved!</string>
    <string name="view_details_later">You can view details later under Trips</string>
    <string name="show_details">Show Details!</string>
    <string name="OK">OK</string>
    <string name="no_past_trips_to_show">There are no past trips to show.</string>

</resources>
