<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_purple_50"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/lbl_trip_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_id"
                android:textSize="15sp" />

        </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/lbl_trip_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/md_black_1000"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_date"
                android:textColor="@color/md_black_1000"
                />

        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_trip_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_duration" />

        </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/lbl_trip_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/md_black_1000"
                android:textSize="15dp"
                />

            <TextView
                android:text="Origin:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_origin"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:text="@string/lbl_trip_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/md_black_1000"
                android:textSize="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_destination"
                android:textColor="@color/md_black_1000"/>

        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_trip_maxSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_maxSpeed" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_trip_maxRPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trip_maxRPM" />
        </LinearLayout>
        -->
        </LinearLayout>
</LinearLayout>